@@ -1,3 +1,9 @@
+2005-03-14 Braden McDaniel  <braden@endoframe.com>
+
+	* mozilla-plugin/src/openvrml-player/player.cpp:  Moved
+	plugin_istream to initial_stream_reader::operator() as a locally
+	defined class.
+
 2005-03-08 Braden McDaniel  <braden@endoframe.com>
 
 	* src/libopenvrml/openvrml/browser.cpp:  Lock the browser when
